--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "browser-image-compression": "^2.0.2",
     "file-saver": "^2.0.5",
+    "firebase": "^12.6.0",
     "jszip": "^3.10.1",
     "next": "16.0.1",
     "react": "19.2.0",
